--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/m.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- 添加 manifest -->
+  <!-- <link rel="manifest" href="/manifest.json"> -->
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>MRP百宝袋</title>
 </head>
 <body>
