--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- <link rel="manifest" href="/manifest.json"> -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>MRP百宝袋</title>
+  <title>百宝袋</title>
 </head>
 <body>
   <div id="root"></div>
