--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/m.svg" />
+  <link rel="icon" type="image/svg+xml" href="/logo-mrk.png" />
   <!-- 添加 manifest -->
   <!-- <link rel="manifest" href="/manifest.json"> -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
